@@ -1,0 +1,138 @@
+<!DOCTYPE html>
+
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <link rel="shortcut icon" type="image/png" href="../img/poc.png" />
+  <title>Text animation rainbow</title>
+
+  <!-- CSS Internal Style Sheet -->
+  <style>
+    .rainbow {
+      animation: rainbow 7s linear;
+      animation-iteration-count: infinite;
+    }
+
+/* DOC : animation : 
+ease - Specifies an animation with a slow start, then fast, then end slowly (this is default)
+linear - Specifies an animation with the same speed from start to end
+ease-in - Specifies an animation with a slow start
+ease-out - Specifies an animation with a slow end
+ease-in-out - Specifies an animation with a slow start and end
+cubic-bezier(n,n,n,n) - Lets you define your own values in a cubic-bezier function
+ */
+
+    @keyframes rainbow {
+
+      100%,
+      0% {
+        color: #FF0000;
+      }
+      14.28% {
+        color: #FF7F00;
+      }
+      28.56% {
+        color: #FFFF00;
+      }
+      42.84% {
+        color: #00FF00;
+      }
+      57.12% {
+        color: #0000FF;
+      }
+      71.4% {
+        color: #4B0082;
+      }
+      85.68% {
+        color: #9400D3;
+      }
+    }
+
+    
+
+    /* other */
+    .text-size {
+      font-size: 5em;
+    }
+  </style>
+
+  <!-- BOOTSTRAP 4 CDN -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+</head>
+
+</head>
+
+<body>
+
+  <!-- CONTENT -->
+
+  <div class="container">
+    <div class="row">
+
+      <div class="col-12 text-center text-size mt-5 rainbow">
+        Hello, it's me,            <br><br><br>               Mario.
+      </div>
+
+    </div>
+  </div>
+
+
+  <!-- CONTENT -->
+  <!-- 
+      100%,
+      0% {
+        color: rgb(255, 0, 0);
+      }
+
+      8% {
+        color: rgb(255, 127, 0);
+      }
+
+      16% {
+        color: rgb(255, 255, 0);
+      }
+
+      25% {
+        color: rgb(127, 255, 0);
+      }
+
+      33% {
+        color: rgb(0, 255, 0);
+      }
+
+      41% {
+        color: rgb(0, 255, 127);
+      }
+
+      50% {
+        color: rgb(0, 255, 255);
+      }
+
+      58% {
+        color: rgb(0, 127, 255);
+      }
+
+      66% {
+        color: rgb(0, 0, 255);
+      }
+
+      75% {
+        color: rgb(127, 0, 255);
+      }
+
+      83% {
+        color: rgb(255, 0, 255);
+      }
+
+      91% {
+        color: rgb(255, 0, 127);
+      }
+
+   -->
+
+
+</body>
+
+</html>
